Add support for virtual threads
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>